# rin-docutils

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.dev.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: module.rst
src/rin/docutils/: __init__.py  flag.py  markers.py
src/rin/docutils/autodecorator/: __init__.py  _modified_generate_autosummary_content.py
src/rin/docutils/autodecorator/templates/autosummary/: module.rst
tests/units/: conftest.py  test_autodecorator.py  test_markers.py
