[build-system]
requires = [
    "setuptools",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "rin-docutils"
version = "1.0.0"
description = "tools help you work with sphnix"
readme = "README.md"
requires-python = ">=3.8"
keywords = ['sphnix', 'document']
urls = {GitHub = "https://github.com/susautw/rin-docutils"}
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = []

[project.optional-dependencies]
sphnix = ["sphnix"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"rin.docutils.autodecorator.templates.autosummary" = ["module.rst"]